exports[`Link should render active 1`] = `
Array [
  Array [
    "isActive",
    "test-route2",
  ],
  Array [
    "buildUrl",
    "test-route2",
    undefined,
  ],
  Array [
    "result",
    "<a class=\"active-link\" href=\"test/test-route2\"><test-child></test-child></a>",
  ],
]
`;

exports[`Link should render inactive 1`] = `
Array [
  Array [
    "isActive",
    "test-route1",
  ],
  Array [
    "buildUrl",
    "test-route1",
    undefined,
  ],
  Array [
    "result",
    "<a href=\"test/test-route1\"><test-child></test-child></a>",
  ],
]
`;

exports[`Link should render with params 1`] = `
Array [
  Array [
    "isActive",
    "test-route1",
  ],
  Array [
    "buildUrl",
    "test-route1",
    Object {
      "testParam1": "testValue1",
      "testParam2": "testValue2",
    },
  ],
  Array [
    "result",
    "<a href=\"test/test-route1\"><test-child></test-child></a>",
  ],
]
`;
